@@ -4,16 +4,17 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
+* Allow content-to-content inclusion
+  [ebrehault]
+
 * Fixed issue with remote themes via https connections
   [loechel]
-
 
 1.1.1 (2015-03-21)
 ------------------
 
 * Make flake8 happy by moving imports to top of file.
   [elro]
-
 
 1.1.0 (2014-10-23)
 ------------------
